[package]
name = "nokv-agent"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NoKV agent tool surface: transport-free dispatch over the metadata namespace verbs, plus the agent-native Holt-backed runtime."

[dependencies]
base64.workspace = true
holt.workspace = true
nokv-meta.workspace = true
nokv-object.workspace = true
nokv-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
